--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
         <hr>
         
         <p><b>En caso de que los datos mostrados no coincidan con la Constancia
-            escaneada favor de reportarlo al correo: serviciosescolares@aragon.unam.mx</b></p>
+            escaneada favor de reportarlo al correo: serviciosescolares@aragon.mx</b></p>
       </section>
       
       </div>
